kube/challeng4/ingress-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: api
  name: ingress-api
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 80
      - path: /api/poi/*
        pathType: Prefix
        backend:
          service:
            name: poi
            port:
              number: 80
      - path: /api/trips/*
        pathType: Prefix
        backend:
          service:
            name: trips
            port:
              number: 80
      - path: /api/user-java/*
        pathType: Prefix
        backend:
          service:
            name: user-java
            port:
              number: 80
      - path: /api/user/*
        pathType: Prefix
        backend:
          service:
            name: userprofile
            port:
              number: 80
