kube/challeng4/ingress-web.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: web
  name: ingress-web
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer
            port:
              number: 80
